# JUCEFUZZ

./: .gitignore  CMakeLists.txt  README.md  juce_harness.cpp  mp3-campaign-logs.txt
in/: random.txt
mp3-harness/: CMakeLists.txt  mp3-gen.py  mp3_reader.cpp
mp3-harnesses/read-harness/: CMakeLists.txt  mp3_read_harness.cpp
mp3-harnesses/read-harness/cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake
mp3-harnesses/scripts/: build-juce-asan.sh  build-juce-no-asan.sh
mp3-harnesses/scripts/read-harness-scripts/: build-and-triage-full.sh  fuzz-read-mp3-full.sh  fuzz-read-mp3.sh  triage-crashes.sh
out2/default/: fuzz_bitmap  fuzzer_setup  fuzzer_stats  plot_data  target_hash
scripts/: build-and-fuzz-full.sh  build-and-fuzz-mp3.sh  build-and-triage-full.sh  build-juce-asan.sh  triage-crashes.sh
strHarness/: CMakeLists.txt  strHarness.cpp  strInstructions.txt
strHarness/scripts/: replay_log.txt
strHarness/triage/: replay_log.txt
wavHarness/: CMakeLists.txt  README.md  regularWav.cpp  wavReadHarness.cpp  wavTriage.cpp
wavHarness/afl-build/: CMakeCache.txt  Makefile  cmake_install.cmake
wavHarness/scripts/: logCrashes.sh  replay_log.txt  wavGenerator.py
wavHarness/triage/: replay_log.txt
zip-harness/: CMakeLists.txt  zip-harness.cpp
zip-harness/cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake
zip-harness/cmake-build/JuceZipHarness_artefacts/JuceLibraryCode/: Info.txt
zip-harness/cmake-build/JuceZipHarness_artefacts/JuceLibraryCode/Debug/: Defs.txt
zip-harness/scripts/: build-and-fuzz.sh  build-and-triage.sh  run-campaign.sh
(+511 files in other folders)
